# morseRust

./: Cargo copy.toml  Cargo.toml  LICENSE  README.md  morseRust.code-workspace
.github/workflows/: ci.yml
data/: sample_000000.json  sample_000001.json  sample_000002.json  sample_000003.json  sample_000004.json  sample_000005.json  sample_000006.json  sample_000007.json  sample_000008.json  sample_000009.json  sample_000010.json  sample_000011.json  sample_000012.json  sample_000013.json  sample_000014.json  sample_000015.json  sample_000016.json  sample_000017.json  sample_000018.json  sample_000019.json  sample_000020.json  sample_000021.json  sample_000022.json  sample_000023.json  sample_000024.json  sample_000025.json  sample_000026.json  sample_000027.json  sample_000028.json  sample_000029.json  sample_000030.json  sample_000031.json  sample_000032.json  sample_000033.json  sample_000034.json  sample_000035.json  sample_000036.json  sample_000037.json  sample_000038.json  sample_000039.json  (+60 more)
src/: data_generator.rs  inference.rs  main.rs  neural_network.rs
