[package]
name = "morseRust"
version = "0.1.0"
edition = "2021"
description = "A professional morse code audio and AI system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mGraphRust/mGraphRust"
keywords = ["morse", "audio", "ai"]
categories = ["audio", "ai"]

[lints.rust]
build_hasher_default_const_new = "allow"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
cpal = "0.16.0"
crossbeam-channel = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
bincode = "1.3"
linoss_rust = { path = "/home/rustuser/projects/active/LinossRust", features = ["ndarray_backend"], default-features = false }

[dev-dependencies]
tempfile = "3.13"

[features]
mic_level_test = []
